# ods-chatbot

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routers/: __init__.py  chat.py  conversations.py  ingest.py
backend/app/core/: providers.py  settings.py
backend/app/domain/: entities.py  errors.py  intent.py  ports.py
backend/app/infrastructure/: bge_m3_embedder.py  chunker.py  docling_parser.py  fakes.py  gemini_llm.py  guardrail.py  intent_classifier.py  openai_embedder.py  postgres_conversation_store.py  qdrant_store.py  reranker.py
backend/app/infrastructure/db/: __init__.py  models.py  session.py
backend/app/schemas/: chat.py
backend/app/usecases/: answer.py  ingest.py
backend/scripts/: ingest_corpus.py
backend/tests/: conftest.py
backend/tests/unit/: test_answer_usecase.py  test_chat_router.py  test_chunker.py  test_conversation_store.py  test_guardrail.py  test_ingest_admin.py  test_intent.py
docs/: DEPLOY_CLOUDFLARE.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatInput.tsx  ChatMessage.tsx  ChatWindow.tsx  CitationsPanel.tsx  HistorySidebar.tsx  LoginScreen.tsx  Markdown.tsx  Sidebar.tsx  SourcesPanel.tsx
frontend/lib/: api.ts  identity.ts  types.ts
