[project]
name = "ods-chatbot-backend"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["app"]

# Heavy/optional deps are imported lazily and ship no type stubs.
[[tool.mypy.overrides]]
module = [
    "FlagEmbedding.*",
    "docling.*",
    "qdrant_client.*",
    "google.*",
    "google.generativeai.*",
    "openai.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 90
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
